# ASTF-Net

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  job.sh  pyproject.toml  setup.py
.github/workflows/: ci.yaml
astf/cli/: train.py
astfnet/: __init__.py  constants.py
astfnet/cli/: predict.py  test.py  train.py
astfnet/data_io/: __init__.py  augmentation.py  datamodule.py  dataset.py  preprocessing.py
astfnet/models/: __init__.py  _factory_utils.py  backbone.py  base.py  cnn.py  loss_fns.py  optim.py  optimizer.py  scheduler.py  transformer.py  unet.py  unet1d.py
astfnet/training/: __init__.py
astfnet/utils/: __init__.py  file_utils.py  plot.py  seismic_utils.py
config/: config-simplecnn.yaml  config-transformer.yaml  config.yaml
notebooks/: amse_implementation.ipynb  test_augmentation_implementation.ipynb
notebooks/implementation_visualization/: amse_implementation.ipynb  data_augmentation_implementation.ipynb
tests/: test_augmentation.py  test_data.py  test_loss_fns.py  test_models.py  test_optimizer_scheduler.py  test_transformer.py
